# nameko-design

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: design.py  main.py
nameko_design/: main.py  sample.py
